fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
   margin: 0 auto;
   width: 420px;
   height: 10%;
-  padding-bottom: 1%;
   background: #DEDEDE;
 }
 
@@ -34,33 +33,33 @@ nav {
 .restaurant-list {
   padding-top: 50px;
   margin: auto;
-  margin: 6%;
 }
 
 .location {
   border-bottom: 1px solid black;
   padding: 1%;
+  white-space: nowrap;
 }
 
 .content {
   display: inline-block;
   padding-bottom: 3%;
   padding-top: 3%;
+  padding-left: 5%;
 }
 
 .content:hover {
 
 }
 
-.fa-chevron-right {
-  display: inline-block;
+.arrow {
   float: right;
-  width: 10%
+  margin-top: 5%;
 }
 
 h1, h3 {
-  padding-left: 1%;
-  line-height: 1;
+  padding-left: 4%;
+  line-height: 1.3em;
 }
 
 .content h1 {
